--- a/AriesParts/res/values-zh-rTW/arrays.xml
+++ b/AriesParts/res/values-zh-rTW/arrays.xml
@@ -24,4 +24,10 @@
         <item>30秒</item>
         <item>永不</item>
     </string-array>
+
+    <string-array name="hspa_entries">
+        <item>僅 UMTS</item>
+        <item>僅 HSDPA</item>
+        <item>HSDPA＋HSUPA</item>
+    </string-array>
 </resources>
