Add config for fast charge tile

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -214,4 +214,9 @@
 
     <!-- Disable lockscreen translucent decor by default -->
     <bool name="config_enableLockScreenTranslucentDecor">true</bool>
+
+<!-- empty string to disable, or eg: /sys/kernel/fast_charge/force_fast_charge
+         for a custom path the delivered kernel supports.
+         it is disabled by default so devices need to add an overlay to enable -->
+    <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string>
 </resources>
